[package]
name = "lambda"
version = "0.1.0"
authors = ["David Barsky <dbarsky@amazon.com>"]
description = "AWS Lambda Runtime."
edition = "2018"

[features]
# no features by default
default = ["simulated", "derive"]
simulated = []
derive = ["lambda-attributes"]

[dependencies]
tokio = { version = "1.0", features = ["macros", "io-util", "sync", "rt-multi-thread"] }
hyper = { version = "0.14", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.39"
bytes = "1.0"
http = "0.2"
lambda-attributes = { path = "../lambda-attributes", version = "0.1.0", optional = true}
async-stream = "0.3"
futures = "0.3"
tracing = "0.1.13"
tracing-futures = "0.2.3"
tracing-error = "0.1.2"
