[package]
name = "lambda"
version = "0.1.0"
authors = ["David Barsky <dbarsky@amazon.com>"]
description = "AWS Lambda Runtime"
edition = "2018"
license = "Apache License 2.0"
repository = "https://github.com/awslabs/aws-lambda-rust-runtime"
readme = "../README.md"

[features]
default = ["simulated", "derive"]
simulated = []
derive = ["lambda-attributes"]

[dependencies]
tokio = { version = "1.0", features = ["macros", "io-util", "sync", "rt-multi-thread"] }
hyper = { version = "0.14", features = ["http1", "client", "server", "stream", "runtime"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.39"
bytes = "1.0"
http = "0.2"
lambda-attributes = { path = "../lambda-attributes", version = "0.1.0", optional = true}
async-stream = "0.3"
futures = "0.3"
tracing-error = "0.1.2"
tracing = { version = "0.1", features = ["log"] }
tracing-futures = "0.2"

[dev-dependencies]
tracing-subscriber = "0.2"
once_cell = "1.4.0"
simple_logger = "1.6.0"
log = "0.4"
simple-error = "0.2"
