[package]
name = "advanced-sqs-partial-batch-failures"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = "^1"
serde_derive = "^1"
serde_with = { version = "^2", features = ["json"], optional = true }
serde_json = "^1"
aws_lambda_events = "0.7.3"
lambda_runtime = "0.7"
tokio = { version = "1", features = ["macros"] }
futures = "0.3"
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", default-features = false, features = ["fmt"] }
