[package]
name = "basic-lambda-external-runtime"
version = "0.1.0"
edition = "2021"

[dependencies]
async-channel = "1.8.0"
futures-lite = "1.13.0"
lambda_runtime = "0.8.0"
lambda_runtime_api_client = "0.8.0"
serde = "1.0.163"
tokio = "1.28.2"
tokio-test = "0.4.2"
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
