[package]
name = "basic-s3-object-lambda-thumbnail"
version = "0.1.0"
edition = "2021"

# Starting in Rust 1.62 you can use `cargo add` to add dependencies 
# to your project.
#
# If you're using an older Rust version,
# download cargo-edit(https://github.com/killercup/cargo-edit#installation) 
# to install the `add` subcommand.
#
# Running `cargo add DEPENDENCY_NAME` will
# add the latest version of a dependency to the list,
# and it will keep the alphabetic ordering for you.

[dependencies]
aws_lambda_events = "0.16.0"
lambda_runtime = { path = "../../lambda-runtime" }
serde = "1"
tokio = { version = "1", features = ["macros"] }
aws-config = "1.5.14"
aws-sdk-s3 = "1.69.0"
thumbnailer = "0.5.1"
mime = "0.3.17"
async-trait = "0.1.85"
ureq = "2.12.1"
aws-smithy-http = "0.60.12"
webp = "=0.3.0"

[dev-dependencies]
serde_json = "1.0.137"
mockall = "0.13.1"
tokio-test = "0.4.4"
