[package]
name = "basic-s3-object-lambda-thumbnail"
version = "0.1.0"
edition = "2021"

# Starting in Rust 1.62 you can use `cargo add` to add dependencies 
# to your project.
#
# If you're using an older Rust version,
# download cargo-edit(https://github.com/killercup/cargo-edit#installation) 
# to install the `add` subcommand.
#
# Running `cargo add DEPENDENCY_NAME` will
# add the latest version of a dependency to the list,
# and it will keep the alphabetic ordering for you.

[dependencies]
aws_lambda_events = { path = "../../lambda-events" }
lambda_runtime = { path = "../../lambda-runtime" }
tokio = { version = "1", features = ["macros"] }
aws-config = { version = "1.8.1", features = ["behavior-version-latest"] }
aws-sdk-s3 = "1.96.0"
thumbnailer = "0.5.1"
mime = "0.3.17"
async-trait = "0.1.88"
ureq = "2.12.1"

[dev-dependencies]
serde_json = "1.0.140"
mockall = "0.13.1"
