[package]
name = "basic-s3-thumbnail"
version = "0.1.0"
edition = "2021"

# Starting in Rust 1.62 you can use `cargo add` to add dependencies 
# to your project.
#
# If you're using an older Rust version,
# download cargo-edit(https://github.com/killercup/cargo-edit#installation) 
# to install the `add` subcommand.
#
# Running `cargo add DEPENDENCY_NAME` will
# add the latest version of a dependency to the list,
# and it will keep the alphabetic ordering for you.

[dependencies]
aws_lambda_events = { path = "../../lambda-events" }
lambda_runtime = { path = "../../lambda-runtime" }
serde = "1"
tokio = { version = "1", features = ["macros"] }
aws-config = "0.55"
aws-smithy-http = "0.55.3"
aws-sdk-s3 = "0.28"
thumbnailer = "0.5.1"
mime = "0.3.16"
async-trait = "0.1.68"
webp = "=0.2.1"

[dev-dependencies]
mockall = "0.11"
tokio-test = "0.4"
chrono = "0.4"
