[package]
name = "basic-sdk"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1"
aws-config = { version = "1.8.1", features = ["behavior-version-latest"] }
aws-sdk-s3 = "1.96.0"
lambda_runtime = { path = "../../lambda-runtime" }
serde = "1.0.219"
tokio = { version = "1", features = ["macros"] }

[dev-dependencies]
mockall = "0.13.1"
