[package]
name = "extension-internal-flush"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
aws_lambda_events = { path = "../../lambda-events" }
lambda-extension = { path = "../../lambda-extension" }
lambda_runtime = { path = "../../lambda-runtime" }
serde = "1.0.136"
tokio = { version = "1.46", features = ["macros", "sync"] }
